modules/gdscript/tests/scripts/runtime/errors/typed_dictionary_assign_basic_to_typed.gd
func test():
	var basic := { 1: 1 }
	var typed: Dictionary[int, int] = basic
	print('not ok')
